// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox renders with defaultProps 1`] = `
<label
  className="ax-checkbox ax-space--x2"
>
  <input
    aria-checked={false}
    checked={false}
    className="ax-checkbox__input"
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with disabled 1`] = `
<label
  className="ax-checkbox ax-checkbox--disabled ax-space--x2"
>
  <input
    aria-checked={false}
    checked={false}
    className="ax-checkbox__input"
    disabled={true}
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with indeterminate 1`] = `
<label
  className="ax-checkbox ax-checkbox--indeterminate ax-space--x2"
>
  <input
    aria-checked="mixed"
    checked={true}
    className="ax-checkbox__input"
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  >
    <svg
      height="14"
      viewBox="0 0 16 16"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="indeterminate"
        d="M3 7h10v2H3z"
        fill="white"
        fillRule="evenodd"
      />
    </svg>
  </span>
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with indeterminate and checked 1`] = `
<label
  className="ax-checkbox ax-space--x2"
>
  <input
    aria-checked={true}
    checked={true}
    className="ax-checkbox__input"
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  >
    <svg
      height="14"
      viewBox="0 0 16 16"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
        stroke="none"
        strokeWidth="1"
      >
        <g
          className="tick"
          fillRule="nonzero"
          stroke="white"
          strokeWidth="2.1"
        >
          <path
            d="M3.25 8.25L6 11l6.75-6.75"
          />
        </g>
      </g>
    </svg>
  </span>
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`CheckBox renders with invalid 1`] = `
<label
  className="ax-checkbox ax-checkbox--invalid ax-space--x2"
>
  <input
    aria-checked={false}
    checked={false}
    className="ax-checkbox__input"
    type="checkbox"
  />
  <span
    className="ax-checkbox__indicator"
  />
  <span
    className="ax-checkbox__label"
  >
    Lorem ipsum
  </span>
</label>
`;
